# emoji

./: .gitignore  .travis.yml  CHANGES.md  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  all.html  index.html  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  pypipublish.yml  pythonTests.yml  updateGithubPages.yml
docs/: .buildinfo  README.md  api.html  api.rst  conf.py  doc8.ini  genindex.html  index.html  index.rst  install.html  install.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/emoji/: core.html  tokenizer.html
docs/_sources/: api.rst.txt  index.rst.txt  install.rst.txt
docs/_static/: alabaster.css
emoji/: __init__.py  __init__.pyi  __main__.py  code.py  core.py  core.pyi  emoji.py  shortcuts.py  tokenizer.py  tokenizer.pyi  unicode_codes.py
emoji/unicode_codes/: __init__.py  __init__.pyi  data_dict.py  data_dict.pyi  de.py  emoji.json  emoji_ar.json  emoji_de.json  emoji_es.json  emoji_fa.json  emoji_fr.json  emoji_id.json  emoji_it.json  emoji_ja.json  emoji_ko.json  emoji_pt.json  emoji_ru.json  emoji_tr.json  emoji_zh.json  en.py  en.pyi  es.py  es.pyi  fr.py  it.py  it.pyi  pt.py  pt.pyi  types.pyi  versions.py
emoji_python/: __init__.py
example/: example.py  hello.py
tests/: __init__.py  conftest.py  test_analyze.py  test_cli.py  test_core.py  test_deprecation.py  test_dict.py  test_json.py  test_nfkc.py  test_unicode_codes.py  test_versions.py  test_zwj_common.py  test_zwj_keep.py  test_zwj_remove.py  utils.py
utils/: README.md  emoji.html  find-missing-shortcodes.py  generate_emoji.py  generate_emoji_translations.py  generateutils.py  get-codes-and-images-from-unicode.py  get-codes-from-unicode-consortium.py  get_codes_from_unicode_emoji_data_files.py  requirements.txt  testutils.py  unicode_codes.py.txt  unicode_codes.txt
utils/gh-pages/: .gitignore  README.rst  generatePages.py  main.css  main.js  requirements.txt  template.html
